--- a/config/leeloo.conf
+++ b/config/leeloo.conf
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 The ZMK Contributors
+# Copyright (c) 2020 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following line to enable the OLED Display
@@ -7,3 +7,14 @@
 # Uncomment these two lines to add support for encoders
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# Uncomment if you are experiencing connectivity issues; this
+# configuration item boosts the BLE transmit power.
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Uncomment if you wish to take advantage Deep Sleep
+# CONFIG_ZMK_SLEEP=n
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+
+# Uncomment to change the default screen saver for OLED from 30s
+# CONFIG_ZMK_IDLE_TIMEOUT=30000
