--- a/build.yaml
+++ b/build.yaml
@@ -13,9 +13,9 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: leeloo_left
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: leeloo_right
   # - board: nice_nano_v2
   #   shield: settings_reset
